# multimedia_player_framework

./: .gitignore  1.patch  1251.diff  132.path  AGENTS.md  OAT.xml  README.md  README_zh.md  bundle.json  cfi_blocklist.txt  config.gni  crash.diff  errorinfo.diff  hisysevent.yaml  multimedia_player_framework_aafwk.gni  player_framework.diff
frameworks/ani/: BUILD.gn
frameworks/ani/ets/: @ohos.multimedia.media.ets
frameworks/ani/include/: ani_avplayer_callback.h  avimagegenerator_ani.h  avimagegenerator_enum.h  avplayer_ani.h  media_ani_common.h  media_ani_utils.h  media_data_source_callback_ani.h
frameworks/cj/avplayer/: BUILD.gn  cj_avplayer.cpp  cj_avplayer.h  cj_avplayer_callback.cpp  cj_avplayer_callback.h  cj_avplayer_ffi.cpp  cj_avplayer_ffi.h  cj_avplayer_utils.cpp  cj_avplayer_utils.h  cj_media_data_source_callback.cpp  cj_media_data_source_callback.h
frameworks/cj/avrecorder/: BUILD.gn  avrecorder_common.h  avrecorder_ffi.cpp  avrecorder_ffi.h  cj_avrecorder.cpp  cj_avrecorder.h  cj_avrecorder_callback.cpp  cj_avrecorder_callback.h
frameworks/cj/avscreen_capture/: BUILD.gn
frameworks/cj/metadatahelper/: BUILD.gn
frameworks/cj/soundpool/: BUILD.gn
frameworks/js/audio_haptic/: BUILD.gn
frameworks/js/avplayer/: BUILD.gn  avads_controller_napi.cpp  avads_controller_napi.h  avplayer_callback.cpp  avplayer_callback.h  avplayer_napi.cpp  avplayer_napi.h  media_data_source_callback.cpp  media_data_source_callback.h
frameworks/js/ringtone_manager/: BUILD.gn
frameworks/js/soundpool/: BUILD.gn
frameworks/js/system_sound_manager/: BUILD.gn
frameworks/native/audio_haptic/: BUILD.gn  audio_haptic_manager_impl.cpp  audio_haptic_manager_impl.h  audio_haptic_player_impl.cpp  audio_haptic_player_impl.h  audio_haptic_sound_low_latency_impl.cpp  audio_haptic_sound_low_latency_impl.h  audio_haptic_sound_normal_impl.cpp  audio_haptic_sound_normal_impl.h  audio_haptic_vibrator_impl.cpp  audio_haptic_vibrator_impl.h
frameworks/native/media_service_helper/: BUILD.gn  media_service_helper.cpp  media_service_helper_impl.cpp  media_service_helper_impl.h
frameworks/native/soundpool/: BUILD.gn  audio_renderer_manager.cpp  audio_renderer_manager.h  audio_stream.cpp  audio_stream.h  cache_buffer.cpp  cache_buffer.h  parallel_stream_manager.cpp  parallel_stream_manager.h  sound_id_manager.cpp  sound_id_manager.h  sound_parser.cpp  sound_parser.h  soundpool.cpp  soundpool.h  soundpool_manager.cpp  soundpool_manager.h  soundpool_manager_multi.cpp  soundpool_manager_multi.h  soundpool_xcollie.cpp  soundpool_xcollie.h  stream.cpp  stream.h  stream_id_manager.cpp  stream_id_manager.h
frameworks/native/system_sound/: BUILD.gn  audio_ringtone_manager.cpp  audio_ringtone_manager.h
frameworks/taihe/: BUILD.gn
frameworks/taihe/audioHaptic/: BUILD.gn
frameworks/taihe/common/: common_taihe.cpp  common_taihe.h
frameworks/taihe/idl/: SystemSoundPlayer.taihe  ohos.multimedia.audioHaptic.audioHaptic.taihe  ohos.multimedia.audioHaptic.taihe  ohos.multimedia.drm.taihe  ohos.multimedia.media.context.taihe  ohos.multimedia.media.taihe  ohos.multimedia.systemSoundManager.context.taihe  ohos.multimedia.systemSoundManager.taihe  ringtonePlayer.taihe  soundPool.taihe  systemTonePlayer.taihe
frameworks/taihe/system_sound_manager/: BUILD.gn
plugins/cross/: media_native.gni
seccomp_policy/: BUILD.gn  media_service.seccomp.policy
services/: BUILD.gn
services/dfx/: BUILD.gn  dfx_log_dump.cpp  dfx_log_dump.h  player_xcollie.cpp  player_xcollie.h  service_dump_manager.cpp  service_dump_manager.h
services/engine/: BUILD.gn
services/engine/common/: BUILD.gn
services/engine/dfx/: BUILD.gn  engine_dump_manager.h
services/engine/gstreamer/: BUILD.gn
services/engine/histreamer/: BUILD.gn
services/etc/: BUILD.gn  media_service.cfg
services/etc/on_demand/: 3002.json  media_service.cfg
services/etc/screencapture/: screencapture_config.para  screencapture_config.para.dac
services/include/: i_avcodec_service.h  i_avcodeclist_service.h  i_avmetadatahelper_service.h  i_lpp_audio_streamer_service.h  i_lpp_video_streamer_service.h  i_media_service.h  i_player_service.h  i_recorder_profiles_service.h  i_recorder_service.h  i_screen_capture_controller.h  i_screen_capture_monitor_service.h  i_screen_capture_service.h  i_transcoder_service.h
services/seccomp_policy/: BUILD.gn  media_service.seccomp.policy
services/services/: BUILD.gn
services/services/common/: avsharedmemory_ipc.cpp  avsharedmemory_ipc.h  i_media_stub_service.h
services/services/datashare/: media_server_datashare.cpp  media_server_datashare.h
services/services/datashare_observer/: datashare_observer.cpp  datashare_observer.h
services/services/engine_intf/: i_avcodec_engine.h  i_avcodeclist_engine.h  i_avmetadatahelper_engine.h  i_engine_factory.h  i_lpp_audio_streamer.h  i_lpp_sync_manager.h  i_lpp_video_streamer.h  i_media_stub_service.h  i_player_engine.h  i_recorder_engine.h  i_transcoder_engine.h  recorder_param.h  transcoder_param.h
services/services/factory/: engine_factory_repo.cpp  engine_factory_repo.h
services/services/media_datashare_observer/: media_datashare_observer.cpp  media_datashare_observer.h
services/services/observer/: account_listener.cpp  account_listener.h  account_observer.cpp  account_observer.h  incall_observer.cpp  incall_observer.h  media_telephony_listener.cpp  media_telephony_listener.h
services/services/subscriber/: media_server_subscriber.cpp  media_server_subscriber.h
services/utils/: BUILD.gn  avdatasrcmemory.cpp  avsharedmemorybase.cpp  avsharedmemorypool.cpp  format.cpp  media_dfx.cpp  media_madvise_utils.cpp  media_permission.cpp  media_utils.cpp  player_xcollie.cpp  task_queue.cpp  time_format_utils.cpp  time_perf.cpp  uri_helper.cpp  watchdog.cpp  xml_parse.cpp
services/utils/include/: audio_haptic_log.h  avdatasrcmemory.h  (+16 more)
test/: BUILD.gn
test/example/: BUILD.gn  audio_haptic_test.cpp
test/fuzztest/: BUILD.gn  aw_common.h
test/jstest/: AVPlayerTestBase.js  MediaTestBase.js  VideoRecorderTestBase.js
test/nativedemo/: BUILD.gn  media_demo.cpp
(+2581 files in other folders)
