# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import(
    "//base/startup/init/services/modules/seccomp/scripts/seccomp_policy_fixer.gni")

ohos_prebuilt_seccomp("media_seccomp_filter") {
  sources = [ "media_service.seccomp.policy" ]  # 策略配置文件的路径

  filtername = "media_service"  # 表示最后生成的动态库名称，libmedia_service_filter.z.so，与引导文件中的service
                                # name保持一致，否则会使能失败
  process_type =
      "system"  # init孵化的进程使用为system，app进程使用app

  subsystem_name = "multimedia"
  part_name = "multimedia_player_framework"

  install_enable = true
  install_images = [ "system" ]
}
