# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/multimedia/player_framework/config.gni")

group("media_unit_test") {
  testonly = true
  deps = []
  if (multimedia_player_framework_support_test) {
    deps += [
      "../frameworks/native/avmetadatahelper/test/unittest:avmetadata_unit_test",
      "../frameworks/native/player/test/unittest:player_unit_test",
      "../frameworks/native/recorder/test/unittest:recorder_unit_test",
      "../frameworks/native/recorder_profiles/test/unittest:recorder_profiles_unit_test",
      "unittest/audio_haptic_test:audio_haptic_unit_test",
      "unittest/dfx_test:player_framework_dfx_test",
      "unittest/observer_test:incallobserver_unit_test",
      "unittest/screen_capture_test:screen_capture_capi_unit_test",
      "unittest/screen_capture_test:screen_capture_native_unit_test",
      "unittest/soundpool_test:soundpool_unit_test",
    ]
  }
}

group("media_fuzz_test") {
  testonly = true
  deps = []
  if (multimedia_player_framework_support_test) {
    deps += [ "fuzztest:fuzztest" ]
  }
}
