# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/multimedia/player_framework/config.gni")

group("media_unit_test") {
  testonly = true
  deps = []
  if (player_framework_support_test) {
    deps += [
      "../frameworks/native/avmetadatahelper/test/unittest:avmetadata_unit_test",
      "../frameworks/native/player/test/unittest:player_unit_test",
      "../frameworks/native/recorder/test/unittest:recorder_unit_test",
      "../frameworks/native/recorder_profiles/test/unittest:recorder_profiles_unit_test",
      "../frameworks/native/system_sound_manager/unittest/ringtone_player_test:ringtone_player_unit_test",
      "../frameworks/native/system_sound_manager/unittest/sound_manager_test:system_sound_manager_unit_test",
      "../frameworks/native/system_sound_manager/unittest/tone_player_test:system_tone_player_unit_test",
      "../frameworks/native/transcoder/test/unittest:transcoder_unit_test",
      "../frameworks/native/video_editor/test/unittest:video_editor_unit_test",
      "unittest/audio_haptic_test:audio_haptic_unit_test",
      "unittest/avmetadata_helper_test:avmetadata_helper_unit_test",
      "unittest/avmetadatahelper_test:avmetadatahelper_unit_test",
      "unittest/dfx_test:player_framework_dfx_test",
      "unittest/hiplayer_impl_test:hiplayer_impl_unit_test",
      "unittest/hitranscode:hitranscode_unit_test",
      "unittest/observer_test:account_observer_unit_test",
      "unittest/observer_test:incall_observer_unit_test",
      "unittest/player_server_mem_test:player_server_mem_test",
      "unittest/player_server_test:player_server_unit_test",
      "unittest/screen_capture_test:screen_capture_capi_unit_test",
      "unittest/screen_capture_test:screen_capture_native_unit_test",
      "unittest/screen_capture_test:screen_capture_server_function_unit_test",
      "unittest/services/utils:utils_unit_test",
      "unittest/soundpool_test:soundpool_unit_test",
      "unittest/transcoder_server:transcoder_server_unit_test",
      "unittest/utils_test:player_framework_utils_test",
    ]
  }
}

group("media_fuzz_test") {
  testonly = true
  deps = []
  if (player_framework_support_test) {
    deps += [ "fuzztest:fuzztest" ]
  }
}
